log
Thu, Oct  2, 2025  4:01:54 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, Oct  2, 2025  4:14:56 PM: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
6bda6a2
Thu, Oct  2, 2025  4:21:01 PM: 
 sudoku.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
 tests:  3|4
total_score: 20/70
240705f
Thu, Oct  2, 2025  4:25:45 PM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
3317d51
Thu, Oct  2, 2025  4:38:09 PM: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
283781d
Thu, Oct  2, 2025  4:44:53 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  7|1
total_score: 55/70
d4435c1
Thu, Oct  2, 2025  5:18:30 PM: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
cbf1833
